servo/tests/compiletest/plugin/compile-fail/arc_rc_must_not_derive_malloc_size_of.rs
extern
crate
malloc_size_of
;
extern
crate
servo_arc
;
use
malloc_size_of
:
:
{
MallocShallowSizeOf
MallocSizeOf
}
;
fn
sizeable
<
T
:
MallocSizeOf
>
(
)
{
}
fn
shallow_sizeable
<
T
:
MallocShallowSizeOf
>
(
)
{
}
fn
main
(
)
{
sizeable
:
:
<
:
:
servo_arc
:
:
Arc
<
i32
>
>
(
)
;
sizeable
:
:
<
:
:
std
:
:
sync
:
:
Arc
<
i32
>
>
(
)
;
sizeable
:
:
<
:
:
std
:
:
rc
:
:
Rc
<
i32
>
>
(
)
;
shallow_sizeable
:
:
<
:
:
servo_arc
:
:
Arc
<
i32
>
>
(
)
;
shallow_sizeable
:
:
<
:
:
std
:
:
sync
:
:
Arc
<
i32
>
>
(
)
;
shallow_sizeable
:
:
<
:
:
std
:
:
rc
:
:
Rc
<
i32
>
>
(
)
;
}
